<resources>
    <string name="app_name" translatable="false">Libre</string>
    <string name="startpage">Home</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="library">Library</string>
    <string name="yes">Yes</string>
    <string name="search_hint">Search</string>
    <string name="identify_music">Identify Music</string>
    <string name="identifying_music">Listening for music…</string>
    <string name="play_local_file">Play Offline File</string>
    <string name="videos">Videos</string>
    <string name="subscribe">Subscribe</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="share">Share</string>
    <string name="download">Download</string>
    <string name="save">Save</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Log in</string>
    <string name="register">Register</string>
    <string name="logout">Log out</string>
    <string name="cancel">Cancel</string>
    <string name="loggedIn">Logged in.</string>
    <string name="loggedout">Logged out.</string>
    <string name="registered">Registered. Now you can subscribe to channels.</string>
    <string name="already_logged_in">Already logged in. You may log out of your account.</string>
    <string name="instances">Choose…</string>
    <string name="customInstance">Custom</string>
    <string name="region">Region</string>
    <string name="login_register">Log in/register</string>
    <string name="importsuccess">Subscribed</string>
    <string name="downloadfailed">Download failed.</string>
    <string name="import_from_yt">Import subscriptions</string>
    <string name="import_from_yt_summary">From YouTube or NewPipe</string>
    <string name="app_theme">Theme</string>
    <string name="server_error">There seem to be a problem with the selected server. Try another instance.</string>
    <string name="unknown_error">Network error.</string>
    <string name="error">Something went wrong.</string>
    <string name="empty">You have to enter a username and password.</string>
    <string name="notgmail">This is for a Piped account</string>
    <string name="defres">Video resolution</string>
    <string name="grid">Grid columns (portrait)</string>
    <string name="grid_landscape">Grid columns (landscape)</string>
    <string name="emptyList">Nothing here.</string>
    <string name="deletePlaylist">Delete playlist</string>
    <string name="areYouSure">Delete the playlist?</string>
    <string name="createPlaylist">Create playlist</string>
    <string name="createNewPlaylist">Create new playlist</string>
    <string name="new_playlist_short">New</string>
    <string name="playlistCreated">Playlist created.</string>
    <string name="playlistName">Playlist name</string>
    <string name="emptyPlaylistName">The playlist name can\'t be empty</string>
    <string name="addToPlaylist">Add to playlist</string>
    <string name="success">Done.</string>
    <string name="fail">Failed :(</string>
    <string name="about">About</string>
    <string name="changeLanguage">Language</string>
    <string name="systemLanguage">System</string>
    <string name="systemDefault">System</string>
    <string name="lightTheme">Light</string>
    <string name="darkTheme">Dark</string>
    <string name="subscribers">%1$s subscribers</string>
    <string name="settings">Settings</string>
    <string name="location">Location</string>
    <string name="instance">Instance</string>
    <string name="customization">Adjustments</string>
    <string name="website">Website</string>
    <string name="donate">Donate</string>
    <string name="uploaderAndVideoCount">%1$s • %2$d videos</string>
    <string name="subscriberAndVideoCounts">%1$s subscribers • %2$d videos</string>
    <string name="videoCount">%1$d videos</string>
    <string name="noInternet">Connect to the Internet first.</string>
    <string name="retry">Retry</string>
    <string name="comments">Comments</string>
    <string name="comments_count">Comments (%1$s)</string>
    <string name="replies">Replies</string>
    <string name="channels">Channels</string>
    <string name="albums">Albums</string>
    <string name="all">All</string>
    <string name="playlists">Playlists</string>
    <string name="okay">OK</string>
    <string name="finished">Finished</string>
    <string name="history">History</string>
    <string name="search_history">Search history</string>
    <string name="clear_history">Clear history</string>
    <string name="music_songs">YT Music Songs</string>
    <string name="music_videos">YT Music Videos</string>
    <string name="music_albums">YT Music Albums</string>
    <string name="music_playlists">YT Music Playlists</string>
    <string name="music_artists">YT Music Artists</string>
    <string name="sponsorblock">SponsorBlock</string>
    <string name="sponsorblock_summary">Uses the https://sponsor.ajay.app API</string>
    <string name="segment_skipped">Skipped segment</string>
    <string name="category_segments">Segments</string>
    <string name="category_sponsor">Sponsor</string>
    <string name="category_sponsor_summary">Paid promotion, paid referrals and direct advertisements. Not for self-promotion or free genuine shoutouts to causes, creators, websites, and products</string>
    <string name="category_selfpromo">Unpaid/Self Promotion</string>
    <string name="category_selfpromo_summary">Similar to \"sponsor\" except for unpaid or self promotion. This includes sections about merchandise, donations, or info about who they collaborated with</string>
    <string name="category_interaction">Interaction reminder</string>
    <string name="category_interaction_summary">When there is a short reminder to like, subscribe or follow in the middle of content. If long or about something specific, it should instead be self promotion</string>
    <string name="category_intro">Intermission/Intro Animation</string>
    <string name="category_intro_summary">An interval without actual content. Could be a pause, static frame, repeating animation. Should not be used for transitions containing info</string>
    <string name="category_outro">End cards and credits</string>
    <string name="category_outro_summary">Info following the ending. Not for conclusions with info</string>
    <string name="category_filler">Filler Tangent/Jokes</string>
    <string name="category_filler_summary">For tangential scenes added only for filler or humor not required to understand the main content of the video</string>
    <string name="category_music_offtopic">Music: Non-Music Section</string>
    <string name="category_music_offtopic_summary">Only for use in music videos. It should cover parts of the video not part of official mixes. In the end, the video should resemble the Spotify or any other mixed version as closely as possible, or reduce talking or other distractions</string>
    <string name="category_preview">Preview/Recap</string>
    <string name="category_preview_summary">For segments detailing future content without additional info. If it includes clips that only appear here, this is very likely the wrong category</string>
    <string name="category_highlight">Show video highlight</string>
    <string name="category_highlight_summary">Could either be the advertised title, the thumbnail or the most interesting part of the video. You can skip to it by tapping on it in the chapters section</string>
    <string name="category_exclusive_access">Exclusive Access</string>
    <string name="category_hook">Hook/Greetings</string>
    <string name="category_hook_summary">For narrative hooks that grab the viewer\'s attention (often as the first scene) by teasing or describing events from later in the same video or future episodes in a series</string>
    <string name="license">License</string>
    <string name="color_accent">Accents</string>
    <string name="color_red">Resting red</string>
    <string name="color_blue">Blissful blue</string>
    <string name="color_yellow">Yeeting yellow</string>
    <string name="color_green">Groovy green</string>
    <string name="color_purple">Pleasurable purple</string>
    <string name="material_you">Material You</string>
    <string name="sponsorblock_notifications">Notifications</string>
    <string name="app_icon">Icon</string>
    <string name="enabled">On</string>
    <string name="disabled">Off</string>
    <string name="piped" translatable="false">Piped</string>
    <string name="youtube" translatable="false">YouTube</string>
    <string name="playOnBackground">Play in the background</string>
    <string name="update_available">Update available</string>
    <string name="appearance">Appearance</string>
    <string name="downloads">Downloads</string>
    <string name="update_summary">Check for update</string>
    <string name="app_uptodate">Running the latest version.</string>
    <string name="playback_speed">Playback speed</string>
    <string name="advanced">Advanced</string>
    <string name="player">Player</string>
    <string name="appearance_summary">Adjust the app to your liking</string>
    <string name="live">Live</string>
    <string name="upcoming">Upcoming</string>
    <string name="shareTo">Share URL to</string>
    <string name="normal_views">%1$s views%2$s</string>
    <string name="defaultIcon">Default</string>
    <string name="legacyIcon">Lost legacy</string>
    <string name="gradientIcon">Glib gradient</string>
    <string name="fireIcon">Fashionable fire</string>
    <string name="torchIcon">Trendy torch</string>
    <string name="shapedIcon">Silly shaped</string>
    <string name="flameIcon">Flying flame</string>
    <string name="birdIcon">Boosted bird</string>
    <string name="instance_summary">Piped, login, and account</string>
    <string name="customInstance_summary">Add…</string>
    <string name="instance_name">Instance name</string>
    <string name="instance_api_url">URL to instance API</string>
    <string name="addInstance">Add Instance</string>
    <string name="empty_instance">Fill in the name and the API URL.</string>
    <string name="invalid_url">Please enter a URL that works</string>
    <string name="version">Version %1$s</string>
    <string name="restore">Restore</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="import_playlists">Import playlists</string>
    <string name="export_playlists">Export playlists</string>
    <string name="app_backup">App backup</string>
    <string name="storage_and_offline_sync">Storage &amp; Offline Sync</string>
    <string name="offline_songs_folder">Offline Music Folder</string>
    <string name="offline_songs_folder_summary_not_set">Select custom folder for offline music &amp; Symfonium sync</string>
    <string name="create_backup_now">Create Backup Now</string>
    <string name="create_backup_now_summary">One-tap JSON export of all playlists and data</string>
    <string name="restore_backup_summary">Restore playlists and app data from a backup JSON file</string>
    <string name="streaming_category">Streaming</string>
    <string name="settings_category_system">System</string>
    <string name="backup_folder">Set backup folder</string>
    <string name="backup_folder_summary_not_set">Choose a folder to store automatic and manual backups</string>
    <string name="auto_music_audio_mode">Auto audio for music videos</string>
    <string name="auto_music_audio_mode_summary">Automatically open music category videos (YouTube Music) in the audio player</string>
    <string name="creation_date">Creation date</string>
    <string name="tooltip_sort">Sort</string>
    <string name="copy">Copy</string>
    <string name="crash_logs">Crash Logs &amp; Diagnostics</string>
    <string name="crash_logs_summary">View, copy, and manage crash diagnostic logs</string>
    <string name="clear_crash_logs">Clear</string>
    <string name="play_track">Play Track</string>
    <string name="try_again">Try Again</string>
</resources>