<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <PreferenceCategory app:title="@string/playlists">

        <Preference
            android:icon="@drawable/ic_download_filled"
            app:key="import_playlists"
            app:title="@string/import_playlists" />

        <Preference
            android:icon="@drawable/ic_upload"
            app:key="export_playlists"
            app:title="@string/export_playlists" />

    </PreferenceCategory>



    <PreferenceCategory app:title="@string/app_backup">

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="enable_auto_backup"
            app:title="Enable Auto Backup"
            app:summary="Automatically backup app data locally every 24 hours" />

        <Preference
            android:icon="@drawable/ic_download_folder"
            app:key="backup_folder"
            app:title="@string/backup_folder" />

        <Preference
            android:icon="@drawable/ic_restore"
            app:key="restore"
            app:title="@string/restore" />


    </PreferenceCategory>

    <PreferenceCategory app:title="Offline Media">

        <Preference
            android:icon="@drawable/ic_download_folder"
            app:key="offline_songs_pref"
            app:title="Offline Songs Folder"
            app:summary="Select custom folder for offline music" />

    </PreferenceCategory>
    
    <PreferenceCategory app:title="Wi-Fi Sync">
        <Preference
            android:icon="@drawable/ic_device"
            app:key="wifi_sync_status"
            app:title="Server Status"
            app:summary="Stopped" />
    </PreferenceCategory>

</PreferenceScreen>